image changed for stacks and some css

--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
       <section class="project-area" id="portfolio">
         <div class="container">
           <div class="project-title pb-5">
-            <h1 class="text-uppercase title-h1">Recently Done Projects</h1>
+            <h1 class="text-uppercase title-h1">Previously Done Projects</h1>
             <!-- <h1 class="text-uppercase title-h1">Quality Work</h1> -->
-            <p>(Click on ALL to avoid overlapping)</p>
+            <p>(click on ALL to avoid overlapping)</p>
           </div>
 
           <div class="button-group">
